--- a/website/package.json
+++ b/website/package.json
@@ -2,6 +2,7 @@
   "name": "visbol-site",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://benjhatch.github.io/visbol2",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -11,6 +12,9 @@
     "react-ace": "^9.3.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
+    "sbolmeta": "^0.3.2",
+    "sha1": "^1.1.1",
+    "urijs": "^1.19.6",
     "visbol": "^2.0.15",
     "visbol-react": "^1.0.37",
     "web-vitals": "^1.0.1"
@@ -19,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
