--- a/website/package.json
+++ b/website/package.json
@@ -2,7 +2,7 @@
   "name": "visbol-site",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://benjhatch.github.io/visbol2",
+  "homepage": "https://benjhatch.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
