updated visbol-react and updated visbol-react on website accordingly

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "visbol-react",
-  "version": "1.0.57",
+  "version": "1.0.64",
   "description": "SBOLv rendering with React",
   "main": "dist/rendering.js",
   "directories": {
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production --display-modules"
+    "build": "webpack --mode production"
   },
   "author": "Benjamin Hatch",
   "license": "ISC",
@@ -16,17 +16,17 @@
     "react-parametric-svg": "^0.1.7"
   },
   "peerDependencies": {
-    "react": "^16.13.1"
+    "react": "^16.13.1 || ^17.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.4",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
-    "css-loader": "^4.3.0",
-    "react": "^16.13.1",
+    "css-loader": "^5.2.6",
     "style-loader": "^1.2.1",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.2",
+    "react": "^16.13.1"
   }
 }
